<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>Legend</artifactId>
        <groupId>dev.lbuddyboy.legend</groupId>
        <version>1.0</version>
    </parent>

    <artifactId>Legend-Bukkit</artifactId>
    <name>Legend-Bukkit</name>
    <version>1.0</version>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.4</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>lunarclient</id>
            <url>https://repo.lunarclient.dev</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.21.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy.commons</groupId>
            <artifactId>Commons-Bukkit</artifactId>
            <version>1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy.arrow</groupId>
            <artifactId>Arrow-Bukkit</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>Duels</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>Events</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy.auctionhouse</groupId>
            <artifactId>AuctionHouse</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.lunarclient</groupId>
            <artifactId>apollo-api</artifactId>
            <version>1.1.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy.rollback</groupId>
            <artifactId>Rollback</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>decentsoftwares.decentholograms</groupId>
            <artifactId>DecentHolograms</artifactId>
            <version>LATEST</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/DecentHolograms.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>PlaceholderAPI</artifactId>
            <version>LATEST</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/PlaceholderAPI.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>citizens</groupId>
            <artifactId>Citizens</artifactId>
            <version>LATEST</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/Citizens.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>denzin</groupId>
            <artifactId>Citizens</artifactId>
            <version>LATEST</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/znpcs.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>AbilityItems</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>MiniGames</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>Crates</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy.combatlogger</groupId>
            <artifactId>CombatLogger</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>Warps</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>Claim</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lbuddyboy</groupId>
            <artifactId>lVouchers</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
